# colorflow-plotter

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/: colormapper.rs  main.rs
